# torus_big

./: CMakeLists.txt  bottleneck.py  bottleneck.sh  bottleneck_dist  gensample.sh  gentest.sh  linear.py  main.cpp  movie  plot.py  plotone.py  rebuild.sh  restart.sh  run.py  run.sh  test.sh  tests.sh  testsample.sh  torus  torus.py  torus.txt  torus_pairs.txt
source/: base.h  graph.h  point.h  simplex.h
